src/sass/stylesheet.scss
body {
    max-width: 960px;
    width: 960px;
    margin: auto;
}

section {
    display: block;
    color: #ffffff;
    border: 2px solid #5965ef;
    // background: radial-gradient(#3a48d2, #0c0d1e);
    background: radial-gradient(rgba(58, 72, 210, 0.99), rgba(12, 13, 30, 0.99));
    max-width: 95%;
    padding: 5px 35px 35px 35px;
    margin: 25px auto;
}

p {
    line-height: 25px;
    text-shadow: rgba(7, 7, 7, 0.5) 0px 0px 10px;
    opacity: 0.95;
    letter-spacing: 0.035em;
}

a {
    &:link {
        color: #04eeff;
    }

    &:visited {
        color: #04eeff;
    }

    &:hover {
        color: darken(#04eeff, 10%);
        transition: 0.05s ease-in-out;
        cursor: pointer;
    }

    &:active {}
}

ul {
    font-size: 1em;
    text-shadow: rgba(7, 7, 7, 0.5) 0px 0px 10px;
    padding-left: 20px;

    li {
        line-height: 2em;
        padding-left: 15px;
    }
}

.link-item {
    margin-bottom: 20px;

    span {
        display: block;
        font-weight: 600;
        margin: 5px 0px 5px 0px;
    }
}

.psx-title {
    display: inline-block;
    margin-left: auto;
    padding: 8px 30px;
    font-family: "Assistant";
    font-weight: 800;
    color: #ffffff;
    letter-spacing: 0.05em;
    text-transform: uppercase;
    border: 2px solid #5965ef;
    // background: radial-gradient(#3a48d2, #0c0d1e);
    background: radial-gradient(rgba(58, 72, 210, 0.99), rgba(12, 13, 30, 0.99));
    text-shadow: 0px 2px 3px #000000;
    font-size: 2.5em
}

.psx-subheading {
    display: inline-block;
    padding: 6px 15px;
    font-family: "Assistant";
    font-weight: 800;
    color: #ffffff;
    letter-spacing: 0.025em;
    text-transform: uppercase;
    border: none;
    background: #383887;
    text-shadow: 2px 2px 0px #000000;
    font-size: 1.75em;
    box-shadow: 0px 3px 3px 2px rgba(0, 0, 0, 0.05);
}

.psx-circle {
    width: 65px;
    height: 65px;
    border-radius: 50%;
    background: radial-gradient(at 40%, #9c9c9c, #252525);
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    box-shadow: 0px 3px 3px 2px rgba(0, 0, 0, 0.15);

    span {
        color: #101010;
        font-family: "Assistant";
        font-weight: 800;
        font-size: 2em;
        text-shadow: 0px 1px 3px rgba(32, 32, 32, 0.3);
    }

    &:nth-of-type(1n) {
        background: radial-gradient(at 40%, #d80000, #160000);
    }
    &:nth-of-type(2n) {
        background: radial-gradient(at 40%, #ecec00, #1f1800);
    }
    &:nth-of-type(3n) {
        background: radial-gradient(at 40%, #00a35a, #001f0f);
    }
}

